resources/k8s/admission.yaml
# Copyright © 2021 Atomist, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "policy-controller.atomist.com"
webhooks:
  - name: "policy-controller.atomist.com"
    rules:
      - apiGroups:
          - "*"
        apiVersions:
          - "*"
        operations:
          - "CREATE"
        resources:
          - "pods"
          - "services"
        scope: "Namespaced"
    clientConfig:
      service:
        namespace: "atomist"
        name: "policy-controller"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNyRENDQVpRQ0NRREhGUFNDRENkMHZ6QU5CZ2txaGtpRzl3MEJBUXNGQURBWE1SVXdFd1lEVlFRRERBeGgKWkcxcGMzTnBiMjVmWTJFd0lCY05NakV3TlRJd01USTFPVFUzV2hnUE1qSTVOVEF6TURVeE1qVTVOVGRhTUJjeApGVEFUQmdOVkJBTU1ER0ZrYldsemMybHZibDlqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDCkFRb0NnZ0VCQUo2bHVJY1ZGbnlLQk1lNk5jV3V0MXp5alhVRnhJQmFsN0xRVk8xZnQ4TVF4VWNSenpXdHRQYzUKTXdudnE4aUJKaWM0U01SNmswMUZoMWFWUkZDRitkNjI0eXZpN08xYWxLVWNGS09DNzh5dHJjOUJycjdqZHYrdApkazcvTFQyekg [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 10
    failurePolicy: Ignore
